--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,4 +90,13 @@
 		<url-pattern>/*</url-pattern>  
 	</filter-mapping>  
     
+	<filter>
+	    <filter-name>ContentSecurityPolicy</filter-name>
+	    <filter-class>Filter.ContentSecurityPolicyFilter</filter-class>
+	</filter>
+	<filter-mapping>
+	    <filter-name>ContentSecurityPolicy</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
