--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -92,11 +92,16 @@
     
 	<filter>
 	    <filter-name>ContentSecurityPolicy</filter-name>
-	    <filter-class>Filter.ContentSecurityPolicyFilter</filter-class>
+	    <filter-class>CSPFilters.ContentSecurityPolicyFilter</filter-class>
 	</filter>
 	<filter-mapping>
 	    <filter-name>ContentSecurityPolicy</filter-name>
 	    <url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<error-page>
+	    <error-code>500</error-code>
+	    <location>/error500.html</location>
+	</error-page>
 	
 </web-app>
